# google-search-console-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/codeql/: codeql-actions.yml  codeql-rust.yml
.github/codeql/actions-workflow-security/: WorkflowSecurity.qll
.github/codeql/actions-workflow-security/test/OverbroadWorkflowPermissions/: OverbroadWorkflowPermissions.expected
.github/codeql/actions-workflow-security/test/OverbroadWorkflowPermissions/.github/workflows/: invalid-attestations.yml  safe-attestations.yml
.github/workflows/: code-coverage.yml  codeql-query-tests.yml  codeql.yml  dependency-governance.yml  devskim.yml  linux-artifact.yml  rust-validation.yml
docs/: CI_ARTIFACT_VERIFICATION.md  TOOL_GUIDE.md
src/: auth_ux.rs  config.rs  contract.rs  error.rs  gsc_client.rs  lib.rs  main.rs  server.rs  tool_surface.rs  tools.rs
